sys/compat/linux/linux_mib.c
@@ -149,8 +149,8 @@ linux_map_osrel(char *osrelease, int *osrel)
 	if (osrelease == sep || sep != eosrelease)
 		return (EINVAL);
 
-	v = v0 * 1000000 + v1 * 1000 + v2;
-	if (v < 1000000)
+	v = LINUX_KERNVER(v0, v1, v2);
+	if (v < LINUX_KERNVER(1, 0, 0))
 		return (EINVAL);
 
 	if (osrel != NULL)
